# openMP

./: .gitignore  CMakeLists.txt
include/: sort.h
src/: bfs.c  edgelist.c  main.c  sort.c  timer.c  vertex.c
